# slim

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  premake5.lua
.github/workflows/: build.yml  ci.yml  codeql.yml
cmake/: CompilerOptions.cmake  Coverage.cmake  PreventInSourceBuild.cmake  Sanitizers.cmake  SymlinkCompileCommands.cmake  Tooling.cmake
docs/: CMakeLists.txt  mainpage.md
docs/doxygen-awesome/: header.html
include/slim/: slim.hpp  some.hpp  utils.hpp
include/slim/core/: application.hpp  assert.hpp  common.hpp  error.hpp  filesystem.hpp  log.hpp  logger.hpp  window.hpp
include/slim/events/: event.hpp  event_bus.hpp  event_handler.hpp  key_events.hpp  mouse_events.hpp  window_events.hpp
include/slim/input/: codes.hpp  input.hpp  input_provider.hpp
include/slim/platform/: desktop_window.hpp
include/slim/platform/desktop/: desktop_input_provider.hpp  desktop_window.hpp
include/slim/platform/opengl/: opengl_renderer_api.hpp  opengl_renderer_provider.hpp  opengl_shader.hpp
include/slim/renderer/: renderer.hpp  renderer_api.hpp  renderer_provider.hpp  shader.hpp
include/slim/scene/: scene.hpp  scene_manager.hpp
include/slim/ui/: ui.hpp
res/: flat.frag  flat.vert  fragment.glsl  light.frag  vertex.glsl
sandbox/: CMakeLists.txt  fragment.glsl  main.cpp  sandbox_scene.cpp  sandbox_scene.hpp  vertex.glsl
src/: CMakeLists.txt  demo.cpp  demo.h  demo_scene.cpp  demo_scene.h  main.cpp  some.cpp  utils.cpp
src/core/: application.cpp  application.h  base.h  filesystem.cpp  input.h  time.cpp  time.h  window.cpp  window.h
src/events/: codes.h  event.h  event_bus.cpp  event_bus.h  event_handler.h  key_events.cpp  key_events.h  mouse_events.cpp  mouse_events.h  window_events.cpp  window_events.h
src/input/: input.cpp
src/platform/: desktop_input_provider.cpp  desktop_window.cpp
src/platform/MacOS/: MacOSInput.cpp  MacOSWindow.cpp  MacOSWindow.h
src/platform/OpenGL/: OpenGLCubemap.cpp  OpenGLCubemap.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
src/platform/desktop/: desktop_input_provider.cpp  desktop_window.cpp
src/platform/opengl/: opengl_renderer_api.cpp  opengl_renderer_provider.cpp  opengl_shader.cpp
src/renderer/: renderer.cpp  shader.cpp
src/rendering/: camera.h  cubemap.cpp  cubemap.h  free_camera.cpp  free_camera.h  index_buffer.cpp  index_buffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.h  texture2d.cpp  texture2d.h  vertex_array.cpp  vertex_array.h  vertex_attribute.h  vertex_buffer.cpp  vertex_buffer.h
src/scene/: material.h  scene.h  scene_manager.cpp  scene_manager.h
src/scene/lighting/: directional_light.cpp  directional_light.h  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
src/ui/: ui.cpp
src/utils/: image.cpp  image.h
test/: CMakeLists.txt  some_test.cpp
